syntax = "proto3";

option go_package = "github.com/XiovV/centralog-agent";

service Centralog {
  rpc Health(HealthCheckRequest) returns (HealthCheckResponse) {}
  rpc CheckAPIKey(CheckAPIKeyRequest) returns (CheckAPIKeyResponse) {}
  rpc GetLogs(GetLogsRequest) returns (stream Log) {}
  rpc GetContainers(GetContainersRequest) returns (ContainerResponse) {}
  rpc GetRunningContainers(Containers) returns (Containers) {}
  rpc GetContainersInfo(Containers) returns (ContainerResponse) {}
}

message Log {
  string container = 1;
  int64 timestamp = 2;
  string message = 3;
}

message GetLogsRequest {
  repeated string containers = 1;
  bool showAll = 2;
  bool follow = 3;
  int32 first = 4;
  int32 last = 5;
}

message ContainerResponse {
  repeated Container containers = 1;
}

message Containers {
  repeated string containers = 1;
}

message GetContainersRequest {

}

message CheckAPIKeyRequest {
  string key = 1;
}

message CheckAPIKeyResponse {
  bool valid = 1;
}

message Container {
  string id = 1;
  string name = 2;
  string state = 3;
}

message HealthCheckRequest {

}

message HealthCheckResponse {
  uint32 status = 1;
}